# cargo-next

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  changelog.md  flake.nix  license-mit
src/: lib.rs  main.rs
