[package]
name = "cargo-next"
description = "A cargo subcommand to set the next crate version"
version = "0.1.4"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/conventional-commits-rs/cargo-next"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
pico-args = "0.3.3"
semver = "0.11.0"
thiserror = "1.0.20"
toml_edit = "0.2.0"
